crates/dsrs-macros/tests/ui/format_duplicate.stderr
error: #[format] can only be specified once per field
 --> tests/ui/format_duplicate.rs:7:5
  |
7 |     #[format("yaml")]
  |     ^^^^^^^^^^^^^^^^^
